--- a/Views/Emails/SellerPaymentDetailsRequest.erb
+++ b/Views/Emails/SellerPaymentDetailsRequest.erb
@@ -2,5 +2,6 @@
   Hi <%= order.seller_name %>. Your <%= order.item.type.downcase %> has sold!<br>
 	<p>To get paid, go here to enter your <a href="http://<%= settings.domain %>/SellerPaymentDetails/<%= order.id %>">payment details</a>.
 	<br><br>
-	More questions?  Check out the <a href='CouchRocket.com/FAQ'>CouchRocket FAQ</a> </p>
+	More questions?  Check out the <a href='
+http://<%= settings.domain %>/FAQ'>CouchRocket FAQ</a> </p>
 </html>
