--- a/Views/ForgotPassword.erb
+++ b/Views/ForgotPassword.erb
@@ -16,6 +16,6 @@
 	<div class="form-row">
 		<label for="user-email">Email:</label>
 		<input id="user-email" type="text" name="email" placeholder="you@example.com" value="<%= user.email %>">
-	</div>
+	</div><br>
 	<button type="submit">Reset Password</button>
 </form>
