--- a/Views/Home.erb
+++ b/Views/Home.erb
@@ -13,7 +13,7 @@
 <% end %>
 
 <% if user_signed_in? && user_items.nil? %>
-<p>Let's get you started! Click the link below</p>
+<p>Sell some stuff! Click the button below</p>
 <form action="/items/new" method="get">
     <input type="submit" value="Post Something for Sale!">
 </form>
