--- a/Views/Layout.erb
+++ b/Views/Layout.erb
@@ -18,8 +18,10 @@
 					<nav>
 						<div class="nav-links">
 						<% if user_signed_in? %>
-						<span class="user-name">Welcome <b><%= current_user.name %></b></span><br>
-						<a href="/users/<%= current_user.id %>">Profile</a><br>
+						Welcome
+						<a href="/users/<%= current_user.id %>">
+						<span class="user-name"><b><%= current_user.name %></b></span>
+						</a><br>
 						<a href="/sessions/sign_out">Sign Out</a><br>
 						<% end %>
 						</div>
