added login profiles to home

--- a/views/home.erb
+++ b/views/home.erb
@@ -18,6 +18,17 @@
 <% end %>
 
 <% if user_signed_out? %>
+
+<div class = "admin">
+<h4>Sample Logins:</h4>
+<b>Admin:</b><br>
+comicsguy@adamm.net / admin1<br>
+<b>Buyer:</b><br>
+ram@themillermediagroup.com / song11 <br>
+<b>Seller:</b><br>
+russell@adamm.net / song11
+</div>
+
 <h3>CouchRocket is the easiest way to buy & sell used furniture online.</h3>
 <p>How CouchRocket works for sellers:
 	<ol>
