--- a/views/sign_in.erb
+++ b/views/sign_in.erb
@@ -1,30 +1,40 @@
 <article id="sessions-new-page">
-	<h2>Sign In</h2>
 
-	<% if user.errors.any? %>
-		<div class="form-errors">
-			<h3>There were some errors with your login:</h3>
-			<ul class="error-messages">
-				<% user.errors.full_messages.each do |error_msg| %>
-					<li><%= error_msg %></li>
-				<% end %>
-			</ul>
-		</div>
-	<% end %>
 
-	<form id="sign-in-form" method="POST" action="/sessions">
-	<div class="form-row">
-		<label for="user-email">Email</label>
-		<input id="user-email" type="text" name="email" placeholder="you@example.com" value="<%= user.email %>">
-		</div>
-		<br>
-		<div class="form-row">
-		<label for="user-password">Password</label>
-		<input id="user-password" type="password" name="password">
-		</div>
-		<br>
-	<button type="submit">Sign In</button>
-	</form>
-<br>
-	<a href="/password/reset">Forgot Your Password?</a>
-</article>
+
+  <!--=== Content Part ===-->
+  <div class="container content-md">
+      <div class="row">
+          <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+            	<h2>Sign In</h2>
+              <form class="reg-page" id="registration-form" action="/sessions" method="post" accept-charset="utf-8">
+
+                  <% if user.errors.any? %>
+                    <div class="form-errors">
+                    <h3>There were some errors with your sign in attempt:</h3>
+                      <ul class="error-messages">
+                        <% user.errors.full_messages.each do |error_msg| %>
+                        <li><%= error_msg %></li>
+                        <% end %>
+                      </ul>
+                    </div>
+                  <% end %>
+
+                  <label for="user-email">Email<span class="color-red">*</span></label>
+                  <input type="text" class="form-control margin-bottom-20"
+									id="user-email" name="email" placeholder="you@example.com" value="<%= user.email %>">
+
+ 									<label for="user-password">Password<span class="color-red">*</span></label>
+                   <input id="user-password" type="password" name="password" class="form-control margin-bottom-20">
+
+                   <button class="btn-u btn-u-sea-shop btn-block margin-bottom-20" type="submit">Sign In</button>
+              </form>
+				      <hr>
+							<h4>Forget your Password ?</h4>
+				      <p>No worries, <a href="/password/reset">click here</a> to reset.</p>
+          </div>
+      </div>
+
+
+  </div><!--/container-->
+  <!--=== End Content Part ===-->
