--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
@@ -21,11 +20,14 @@
     <!-- CSS Implementation Plugins -->
     <link rel="stylesheet" href="/assets/plugins/line-icons/line-icons.css">
     <link rel="stylesheet" href="/assets/plugins/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/css/plugins/hover-effect/css/custom-hover-effects.css">
+    <link rel="stylesheet" href="/assets/css/plugins/hover-effect/css/custom-hover-effects.css">
+    <link rel="stylesheet" href="assets/plugins/sky-forms/version-2.0.1/css/custom-sky-forms.css">
     <link rel="stylesheet" href="/assets/plugins/scrollbar/src/perfect-scrollbar.css">
     <link rel="stylesheet" href="/assets/plugins/owl-carousel/owl-carousel/owl.carousel.css">
     <link rel="stylesheet" href="/assets/plugins/revolution-slider/rs-plugin/css/settings.css">
     <link rel="stylesheet" href="/assets/plugins/master-slider/quick-start/masterslider/style/masterslider.css">
+    <link rel="stylesheet" href="/assets/plugins/jquery-steps/css/custom-jquery.steps.css">
+
 
     <!-- CSS Theme -->
     <link rel="stylesheet" href="/assets/css/theme-colors/default.css">
@@ -128,6 +130,8 @@
 <!-- JS Implementation Plugins -->
 <script src="/assets/plugins/back-to-top.js"></script>
 <script src="/assets/plugins/owl-carousel/owl-carousel/owl.carousel.js"></script>
+<script src="/assets/plugins/sky-forms/version-2.0.1/js/jquery.validate.min.js"></script>
+<script src="/assets/plugins/jquery-steps/build/jquery.steps.js"></script>
 
 <!-- Master Slider -->
 <script src="/assets/plugins/master-slider/quick-start/masterslider/masterslider.min.js"></script>
