FAQ and Checkout Work

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="/assets/plugins/line-icons/line-icons.css">
     <link rel="stylesheet" href="/assets/plugins/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="/assets/css/plugins/hover-effect/css/custom-hover-effects.css">
-    <link rel="stylesheet" href="assets/plugins/sky-forms/version-2.0.1/css/custom-sky-forms.css">
+    <link rel="stylesheet" href="/assets/plugins/sky-forms/version-2.0.1/css/custom-sky-forms.css">
     <link rel="stylesheet" href="/assets/plugins/scrollbar/src/perfect-scrollbar.css">
     <link rel="stylesheet" href="/assets/plugins/owl-carousel/owl-carousel/owl.carousel.css">
     <link rel="stylesheet" href="/assets/plugins/revolution-slider/rs-plugin/css/settings.css">
@@ -141,6 +141,12 @@
 <script src="/assets/plugins/scrollbar/src/jquery.mousewheel.js"></script>
 <script src="/assets/plugins/scrollbar/src/perfect-scrollbar.js"></script>
 
+<!-- Sky Forms -->
+<script type="text/javascript" src="/assets/plugins/sky-forms/version-2.0.1/js/jquery.maskedinput.min.js"></script>
+<script type="text/javascript" src="/assets/plugins/sky-forms/version-2.0.1/js/jquery-ui.min.js"></script>
+<script type="text/javascript" src="/assets/plugins/sky-forms/version-2.0.1/js/jquery.validate.min.js"></script>
+
+
 <!-- JS Customization -->
 <script src="/assets/js/custom.js"></script>
 
@@ -169,6 +175,18 @@
     <script src="/assets/plugins/html5shiv.js"></script>
     <script src="/assets/js/plugins/placeholder-IE-fixes.js"></script>
 <![endif]-->
+
+<!--[if lt IE 9]>
+    <script src="assets/plugins/respond.js"></script>
+    <script src="assets/plugins/html5shiv.js"></script>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="assets/plugins/sky-forms/version-2.0.1/js/sky-forms-ie8.js"></script>
+<![endif]-->
+
+<!--[if lt IE 10]>
+    <script src="assets/plugins/sky-forms/version-2.0.1/js/jquery.placeholder.min.js"></script>
+<![endif]-->
+
 
 </body>
 </html>
