--- a/views/home.erb
+++ b/views/home.erb
@@ -1,6 +1,6 @@
 <!--=== Slider ===-->
-    <div class="tp-banner-container" style="overflow: visible;">
-        <div class="tp-banner">
+<div class="tp-banner-container" style="overflow: visible;">
+  <div class="tp-banner">
             <ul>
                 <!-- SLIDE -->
                 <li class="revolution-mch-1" data-transition="fade" data-slotamount="5" data-masterspeed="1000" data-title="Slide 1">
@@ -27,119 +27,121 @@
                 <!-- END SLIDE -->
             </ul>
             <div class="tp-bannertimer tp-bottom"></div>
-        </div>
-    </div>
-    <!--=== End Slider ===-->
+   </div>
+</div>
+<!--=== End Slider ===-->
+<!--=== Product Content ===-->
+<div class="container content-md">
+	<div class="heading heading-v1 margin-bottom-20">
+		<h2>For Sellers:</h2>
+		<br>
+		<br>
+ 		<div class="container">
+      <!--=== Product Service ===-->
+      <div class="row margin-bottom-60">
+          <div class="col-md-4 product-service md-margin-bottom-30">
+              <div class="product-service-heading">
+                  <i class="fa fa-laptop"></i>
+              </div>
+              <div class="product-service-in">
+                  <h3>Post an Ad</h3>
+                  <p>Upload a great pic, add a few lines of description, and you're done!</p>
+              </div>
+          </div>
+          <div class="col-md-4 product-service md-margin-bottom-30">
+              <div class="product-service-heading">
+                  <i class="fa fa-truck"></i>
+              </div>
+              <div class="product-service-in">
+                  <h3>We Pick Up</h3>
+                  <p>After the buyer orders, we send a professional delivery crew to you.<br>You never have to meet the buyer.</p>
+              </div>
+          </div>
+          <div class="col-md-4 product-service">
+              <div class="product-service-heading">
+                  <i class="fa fa-money"></i>
+              </div>
+              <div class="product-service-in">
+                  <h3>You Get Paid</h3>
+                  <p>The buyer approves.<br>We pay you electronically.<br>No awkward exchange and depositing cash.</p>
 
-    <!--=== Product Content ===-->
-    <div class="container content-md">
-        <div class="heading heading-v1 margin-bottom-20">
-   				<h2>For Sellers:</h2>
-   				<br>
-   				<br>
-			    <div class="container">
-			        <!--=== Product Service ===-->
-			        <div class="row margin-bottom-60">
-			            <div class="col-md-4 product-service md-margin-bottom-30">
-			                <div class="product-service-heading">
-			                    <i class="fa fa-laptop"></i>
-			                </div>
-			                <div class="product-service-in">
-			                    <h3>Post an Ad</h3>
-			                    <p>Upload a great pic, add a few lines of description, and you're done!</p>
-			                </div>
-			            </div>
-			            <div class="col-md-4 product-service md-margin-bottom-30">
-			                <div class="product-service-heading">
-			                    <i class="fa fa-truck"></i>
-			                </div>
-			                <div class="product-service-in">
-			                    <h3>We Pick Up</h3>
-			                    <p>After the buyer orders, we send a professional delivery crew to you.<br>You never have to meet the buyer.</p>
-			                </div>
-			            </div>
-			            <div class="col-md-4 product-service">
-			                <div class="product-service-heading">
-			                    <i class="fa fa-money"></i>
-			                </div>
-			                <div class="product-service-in">
-			                    <h3>You Get Paid</h3>
-			                    <p>The buyer approves.<br>We pay you electronically.<br>No awkward exchange and depositing cash.</p>
+              </div>
+          </div>
+      </div><!--/end row-->
+      <!--=== End Product Service ===-->
+  </div><!--/end container-->
 
-			                </div>
-			            </div>
-			        </div><!--/end row-->
-			        <!--=== End Product Service ===-->
-			    </div><!--/end container-->
+		<h2>For Buyers:</h2>
+		<br>
+		<br>
+  <div class="container">
+      <!--=== Product Service ===-->
+        <!--=== Product Service ===-->
+      <div class="row margin-bottom-60">
+          <div class="col-md-4 product-service md-margin-bottom-30">
+              <div class="product-service-heading">
+                  <i class="fa fa-laptop"></i>
+              </div>
+              <div class="product-service-in">
+                  <h3>Pay Online, No Cash</h3>
+                  <p>Order and pay via credit card.</p>
+              </div>
+          </div>
+          <div class="col-md-4 product-service md-margin-bottom-30">
+              <div class="product-service-heading">
+                  <i class="fa fa-truck"></i>
+              </div>
+              <div class="product-service-in">
+                  <h3>We Deliver</h3>
+                  <p>A professional delivery crew brings your furniture at a time of your choosing<br>You never have to meet the buyer.</p>
+              </div>
+          </div>
 
-   				<h2>For Buyers:</h2>
-   				<br>
-   				<br>
-			    <div class="container">
-			        <!--=== Product Service ===-->
-			          <!--=== Product Service ===-->
-			        <div class="row margin-bottom-60">
-			            <div class="col-md-4 product-service md-margin-bottom-30">
-			                <div class="product-service-heading">
-			                    <i class="fa fa-laptop"></i>
-			                </div>
-			                <div class="product-service-in">
-			                    <h3>Pay Online, No Cash</h3>
-			                    <p>Order and pay via credit card.</p>
-			                </div>
-			            </div>
-			            <div class="col-md-4 product-service md-margin-bottom-30">
-			                <div class="product-service-heading">
-			                    <i class="fa fa-truck"></i>
-			                </div>
-			                <div class="product-service-in">
-			                    <h3>We Deliver</h3>
-			                    <p>A professional delivery crew brings your furniture at a time of your choosing<br>You never have to meet the buyer.</p>
-			                </div>
-			            </div>
+          <div class="col-md-4 product-service md-margin-bottom-30">
+              <div class="product-service-heading">
+                  <i class="icon-refresh"></i>
+              </div>
+              <div class="product-service-in">
+                  <h3>Free Returns</h3>
+                  <p>Don't like the item?
+                  We'll take it right back at no charge.</p>
+              </div>
+          </div>
 
-			            <div class="col-md-4 product-service md-margin-bottom-30">
-			                <div class="product-service-heading">
-			                    <i class="icon-refresh"></i>
-			                </div>
-			                <div class="product-service-in">
-			                    <h3>Free Returns</h3>
-			                    <p>Don't like the item?
-			                    We'll take it right back at no charge.</p>
-			                </div>
-			            </div>
+      </div><!--/end row-->
+      <!--=== End Product Service ===-->
+  </div><!--/end container-->
 
-			        </div><!--/end row-->
-			        <!--=== End Product Service ===-->
-			    </div><!--/end container-->
+	<% if !user_signed_in? %>
+	<form method="GET" action="/items/new">
+   <button class="btn-u btn-u-lg btn-u-sea rounded float-shadow"><i class="fa fa-rocket"></i>List Your Stuff Today!</button>
+   </form>
+	<% end %>
 
-					<% if !user_signed_in? %>
-					<form method="GET" action="/items/new">
-           <button class="btn-u btn-u-lg btn-u-sea rounded float-shadow"><i class="fa fa-rocket"></i>List Your Stuff Today!</button>
-           </form>
-					<% end %>
+	<div class="col-md-6 shadow-wrapper">
+                <blockquote class="hero box-shadow shadow-effect-4">
+                    <p><em>"Lorem ipsum dolor sit amet, consectetur adipiscing duis mollis, est non commodo luctus elit posuere erat a ante. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis lorem ipsum dolor sit amet, consectetur adipiscing"</em></p>
+                    <small><em>Etiam porta sem malesuada</em></small>
+                </blockquote>
+            </div>
+  <div class ="tag-box tag-box-v2 col-md-3 product-service ">
+	<% if user_signed_out? %>
+	<br>
+	<h4>Sample Logins:</h4>
+	<b>Admin:</b><br>
+	comicsguy@adamm.net / admin1<br>
+	<b>Buyer:</b><br>
+	ram@themillermediagroup.com / song11 <br>
+	<b>Seller:</b><br>
+	russell@adamm.net / song11
+	<% end %>
+	<br><br>
+	</div>
+</div>
 
-			    <div class ="tag-box tag-box-v2 col-md-3 product-service ">
-					<% if user_signed_out? %>
-					<br>
-					<h4>Sample Logins:</h4>
-					<b>Admin:</b><br>
-					comicsguy@adamm.net / admin1<br>
-					<b>Buyer:</b><br>
-					ram@themillermediagroup.com / song11 <br>
-					<b>Seller:</b><br>
-					russell@adamm.net / song11
-					<% end %>
-					<br><br>
-					</div>
-        </div>
-
-
-
-
-        <div class="heading heading-v1 margin-bottom-40">
-            <h2>Cool Stuff For Sale</h2>
-        </div>
+<div class="heading heading-v1 margin-bottom-30">
+    <h2>Cool Stuff For Sale</h2>
+</div>
 
 <!--=== Product Content ===-->
 		<div class="container content-md">
@@ -147,7 +149,7 @@
         <div class="row illustration-v2">
         		<% items_for_sale.each do |item| %>
             <div class="col-md-3 col-sm-6 md-margin-bottom-30">
-                <div class="product-img">
+                <div class="product-img height-300">
                     <a href="/items/<%= item.id %>"><img class="full-width img-responsive" src="<%= item.picture1_url %>"></a>
                 </div>
                 <div class="product-description product-description-brd">
@@ -170,20 +172,6 @@
     </div>
 <!--=== End Product Content ===-->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <% if user_signed_in? && current_user.is_admin? %>
 <br><br>
 <div class = "admin">
@@ -191,10 +179,6 @@
 </div>
 <br><br>
 <% end %>
-
-
-
-
 
 <% if user_signed_in? && user_items.nil? %>
 <p>Sell some stuff! Click the button below</p>
@@ -211,3 +195,62 @@
 		<%= item.brand %> <%= item.type %></a><br><br>
 		<% end %>
 <% end %>
+
+
+
+<!-- JS Global Compulsory -->
+<script src="/assets/plugins/jquery/jquery.min.js"></script>  <!-- needed for Revolution Slider -->
+<script src="/assets/plugins/jquery/jquery-migrate.min.js"></script>
+<script src="/assets/plugins/bootstrap/js/bootstrap.min.js"></script>  <!-- needed for Revolution Slider -->
+
+<!-- Revolution Slider -->
+<script src="/assets/plugins/owl-carousel/owl-carousel/owl.carousel.js"></script> <!-- needed for Revolution Slider -->
+<script src="/assets/plugins/jquery.parallax.js"></script>  <!-- needed for Revolution Slider -->
+<script src="/assets/plugins/revolution-slider/rs-plugin/js/jquery.themepunch.tools.min.js"></script> <!-- needed for Revolution Slider -->
+<script src="/assets/plugins/revolution-slider/rs-plugin/js/jquery.themepunch.revolution.min.js"></script> <!-- needed for Revolution Slider -->
+
+
+<!-- Scrollbar -->
+<script src="/assets/plugins/scrollbar/src/jquery.mousewheel.js"></script>
+<script src="/assets/plugins/scrollbar/src/perfect-scrollbar.js"></script>  <!-- needed for Revolution Slider -->
+
+
+<!-- JS Page Level -->
+<script src="/assets/js/shop.app.js"></script>   <!-- needed for Revolution Slider -->
+<script src="/assets/js/plugins/owl-carousel.js"></script>  <!-- needed for Revolution Slider -->
+<script src="/assets/js/plugins/revolution-slider.js"></script>  <!-- needed for Revolution Slider -->
+
+<!-- JS Page Level (Checkout Page) -->
+<script src="/assets/js/forms/page_login.js"></script>
+<script src="/assets/js/plugins/stepWizard.js"></script>
+<script src="/assets/js/forms/product-quantity.js"></script>
+<script type="text/javascript" src="/assets/js/plugins/datepicker.js"></script>
+<script type="text/javascript" src="/assets/plugins/timepicker/jquery.timepicker.js"></script>
+
+
+<script>
+    jQuery(document).ready(function() {
+        App.init();
+        RevolutionSlider.initRSfullWidth();
+        App.initParallaxBg();
+        OwlCarousel.initOwlCarousel();
+
+
+});
+</script>
+<!--[if lt IE 9]>
+    <script src="/assets/plugins/respond.js"></script>
+    <script src="/assets/plugins/html5shiv.js"></script>
+    <script src="/assets/js/plugins/placeholder-IE-fixes.js"></script>
+<![endif]-->
+
+<!--[if lt IE 9]>
+    <script src="/assets/plugins/respond.js"></script>
+    <script src="/assets/plugins/html5shiv.js"></script>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="/assets/plugins/sky-forms/version-2.0.1/js/sky-forms-ie8.js"></script>
+<![endif]-->
+
+<!--[if lt IE 10]>
+    <script src="/assets/plugins/sky-forms/version-2.0.1/js/jquery.placeholder.min.js"></script>
+<![endif]-->
