--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,6 +2,7 @@
 <!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
+
 <head>
     <title>CouchRocket | Buy & Sell Used Furniture</title>
 
@@ -11,72 +12,82 @@
     <meta name="description" content="CouchRocket is the easiest way to buy and sell used furniture.">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/favicon-192x192.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="/favicon-160x160.png" sizes="160x160">
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
 
     <!-- CSS Global Compulsory -->
     <link rel="stylesheet" href="/assets/plugins/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/shop.style.css">
 
     <!-- CSS Implementation Plugins -->
+
+    <link rel="stylesheet" href="/assets/plugins/revolution-slider/rs-plugin/css/settings.css">  <!-- needed for Revolution Slider -->
+
     <link rel="stylesheet" href="/assets/plugins/line-icons/line-icons.css">
     <link rel="stylesheet" href="/assets/plugins/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="/assets/css/plugins/hover-effect/css/custom-hover-effects.css">
     <link rel="stylesheet" href="/assets/plugins/sky-forms/version-2.0.1/css/custom-sky-forms.css">
     <link rel="stylesheet" href="/assets/plugins/scrollbar/src/perfect-scrollbar.css">
     <link rel="stylesheet" href="/assets/plugins/owl-carousel/owl-carousel/owl.carousel.css">
-    <link rel="stylesheet" href="/assets/plugins/revolution-slider/rs-plugin/css/settings.css">
+
     <link rel="stylesheet" href="/assets/plugins/master-slider/quick-start/masterslider/style/masterslider.css">
     <link rel="stylesheet" href="/assets/plugins/jquery-steps/css/custom-jquery.steps.css">
-
+    <link rel="stylesheet" href="/assets/plugins/timepicker/jquery.timepicker.css">
 
     <!-- CSS Theme -->
     <link rel="stylesheet" href="/assets/css/theme-colors/default.css">
+
 </head>
 
 <body class="header-fixed">
 <div class="wrapper">
 
-    <!--=== Header v5 ===-->
-    <div class="header-v5 header-static">
-        <!-- Navbar -->
-        <div class="navbar navbar-default mega-menu" role="navigation">
-            <div class="container">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="/">
-                        <img id="logo-header" class="float-shadow" src="http://i.imgur.com/fJPQajg.png" alt="CouchRocket Logo">
-                    </a>
-                </div>
+  <!--=== Header v5 ===-->
+  <div class="header-v5 header-static">
+      <!-- Navbar -->
+      <div class="navbar navbar-default mega-menu" role="navigation">
+          <div class="container">
+              <!-- Brand and toggle get grouped for better mobile display -->
+              <div class="navbar-header">
+                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+                      <span class="sr-only">Toggle navigation</span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                  </button>
+                  <a class="navbar-brand" href="/">
+                      <img id="logo-header" class="float-shadow" src="http://i.imgur.com/2FnBV5f.png" alt="CouchRocket Logo">
+                  </a>
+              </div>
 
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse navbar-responsive-collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a class="float-shadow" href="/register">Sign Up</a></li>
-                        <li><a class="float-shadow" href="/sessions/new">Log In</a></li>
-                        <li><a class="float-shadow" href="/FAQ">Help</a></li>
-                        <li><br><form method="GET" action="/items/new">
-                        <button a href="/items/new" class="btn-u btn-u-sea rounded float-shadow"><i class="fa fa-rocket"></i> List Your Stuff</button>
-                        </form></li>
-                    </ul>
+              <!-- Collect the nav links, forms, and other content for toggling -->
+              <div class="collapse navbar-collapse navbar-responsive-collapse">
+                  <ul class="nav navbar-nav">
+                      <li><a class="float-shadow" href="/register">Sign Up</a></li>
+                      <li><a class="float-shadow" href="/sessions/new">Log In</a></li>
+                      <li><a class="float-shadow" href="/FAQ">Help</a></li>
+                      <li><br><form method="GET" action="/items/new">
+                      <button a href="/items/new" class="btn-u btn-u-sea rounded float-shadow"><i class="fa fa-rocket"></i> List Your Stuff</button>
+                      </form></li>
+                  </ul>
 
-                </div><!--/navbar-collapse-->
-            </div>
-        </div>
-        <!-- End Navbar -->
-    </div>
-    <!--=== End Header v5 ===-->
+              </div><!--/navbar-collapse-->
+          </div>
+      </div>
+      <!-- End Navbar -->
+  </div>
+  <!--=== End Header v5 ===-->
 
-    <!--=== Content Part  ===-->
-    <%= yield %>
-    <!--=== End Content Part  ===-->
+  <!--=== Content Part  ===-->
+  <%= yield %>
+  <!--=== End Content Part  ===-->
 
 </div><!--/wrapper-->
+
 
 
 <!--=== Shop Subscribe ===-->
@@ -119,73 +130,6 @@
     </div><!--/copyright-->
 </div>
 <!--=== End Footer v4 ===-->
-
-
-
-<!-- JS Global Compulsory -->
-<script src="/assets/plugins/jquery/jquery.min.js"></script>
-<script src="/assets/plugins/jquery/jquery-migrate.min.js"></script>
-<script src="/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-
-<!-- JS Implementation Plugins -->
-<script src="/assets/plugins/back-to-top.js"></script>
-<script src="/assets/plugins/owl-carousel/owl-carousel/owl.carousel.js"></script>
-<script src="/assets/plugins/sky-forms/version-2.0.1/js/jquery.validate.min.js"></script>
-<script src="/assets/plugins/jquery-steps/build/jquery.steps.js"></script>
-
-<!-- Master Slider -->
-<script src="/assets/plugins/master-slider/quick-start/masterslider/masterslider.min.js"></script>
-<script src="/assets/plugins/master-slider/quick-start/masterslider/jquery.easing.min.js"></script>
-
-<!-- Scrollbar -->
-<script src="/assets/plugins/scrollbar/src/jquery.mousewheel.js"></script>
-<script src="/assets/plugins/scrollbar/src/perfect-scrollbar.js"></script>
-
-<!-- Sky Forms -->
-<script type="text/javascript" src="/assets/plugins/sky-forms/version-2.0.1/js/jquery.maskedinput.min.js"></script>
-<script type="text/javascript" src="/assets/plugins/sky-forms/version-2.0.1/js/jquery-ui.min.js"></script>
-<script type="text/javascript" src="/assets/plugins/sky-forms/version-2.0.1/js/jquery.validate.min.js"></script>
-
-
-<!-- JS Customization -->
-<script src="/assets/js/custom.js"></script>
-
-<!-- Revolution Slider -->
-<script src="/assets/plugins/jquery.parallax.js"></script>
-<script src="/assets/plugins/revolution-slider/rs-plugin/js/jquery.themepunch.tools.min.js"></script>
-<script src="/assets/plugins/revolution-slider/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
-
-<!-- JS Page Level -->
-<script src="/assets/js/shop.app.js"></script>
-<script src="/assets/js/plugins/owl-carousel.js"></script>
-<script src="/assets/js/plugins/revolution-slider.js"></script>
-<script src="/assets/js/plugins/master-slider.js"></script>
-<script>
-    jQuery(document).ready(function() {
-        App.init();
-        App.initParallaxBg();
-        OwlCarousel.initOwlCarousel();
-        RevolutionSlider.initRSfullWidth();
-        MasterSliderShowcase2.initMasterSliderShowcase2();
-
-});
-</script>
-<!--[if lt IE 9]>
-    <script src="/assets/plugins/respond.js"></script>
-    <script src="/assets/plugins/html5shiv.js"></script>
-    <script src="/assets/js/plugins/placeholder-IE-fixes.js"></script>
-<![endif]-->
-
-<!--[if lt IE 9]>
-    <script src="assets/plugins/respond.js"></script>
-    <script src="assets/plugins/html5shiv.js"></script>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <script src="assets/plugins/sky-forms/version-2.0.1/js/sky-forms-ie8.js"></script>
-<![endif]-->
-
-<!--[if lt IE 10]>
-    <script src="assets/plugins/sky-forms/version-2.0.1/js/jquery.placeholder.min.js"></script>
-<![endif]-->
 
 
 </body>
